--- a/views/reportes/geolocalizacion.twig
+++ b/views/reportes/geolocalizacion.twig
@@ -81,6 +81,7 @@
                             strokeOpacity: 1.0,
                             strokeWeight: 4
                         });
+                        line.setMap(null);
                         line.setMap(map);
                     }
 
