--- a/views/reportes/geolocalizacion.twig
+++ b/views/reportes/geolocalizacion.twig
@@ -66,6 +66,9 @@
                         zoom: 7
                     });
 
+                    self.markers = [];
+                    self.coords = [];
+
                     for (var i = 0; i < data.length; i++) {
                         var obj = data[i];
                         self.addWeatherMarker(obj, map);
