--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -109,9 +109,9 @@
                                     <td style="text-align: right; vertical-align: middle;">
                                         <span style="text-transform: uppercase;" class="form-control-plaintext" v-html="a.fecha_maxima_pago"></span>
                                     </td>
-                                    <td style="text-align: right; vertical-align: middle;">
-                                        <span style="text-transform: uppercase;" class="form-control-plaintext" v-html="a.recuperado"></span>
-                                    </td>
+{#                                    <td style="text-align: right; vertical-align: middle;">#}
+{#                                        <span style="text-transform: uppercase;" class="form-control-plaintext" v-html="a.recuperado"></span>#}
+{#                                    </td>#}
                                 </tr>
                             </table>
                         </div>
