--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -59,6 +59,8 @@
                                 </thead>
                                 <tbody>
                                 <tr v-for="a in asignacion">
+                                    <template v-if="a.aplicativo !== 'undefined'">
+
                                     <template v-if="a.marca == 'DINERS'">
                                         <td style="text-align: center; background-color: #0066A8; color: white; vertical-align: middle; font-weight: bold;">
                                             DINERS
@@ -112,6 +114,7 @@
                                     <td style="text-align: right; vertical-align: middle;">
                                         <span style="text-transform: uppercase;" class="form-control-plaintext" v-html="a.recuperado"></span>
                                     </td>
+                                    </template>
                                 </tr>
                             </table>
                         </div>
