--- a/views/layout.twig
+++ b/views/layout.twig
@@ -98,7 +98,7 @@
             <div class="app-sidebar__overlay" data-bs-toggle="sidebar"></div>
             <div class="app-sidebar">
                 <div class="side-header">
-                    <a class="header-brand1" href="{{ root }}">
+                    <a class="header-brand1" href="{{ root }}"> {{ root }}
                         <img src="{{ root }}/template_ok/images/brand/logo.png" class="header-brand-img desktop-logo"
                              alt="logo">
                         <img src="{{ root }}/template_ok/images/brand/logo-1.png" class="header-brand-img toggle-logo"
