--- a/views/layout.twig
+++ b/views/layout.twig
@@ -27,7 +27,8 @@
                     <a aria-label="Hide Sidebar" class="app-sidebar__toggle" data-bs-toggle="sidebar"
                        href="javascript:void(0)"></a>
 
-                    <a class="logo-horizontal " href="/">
+                    <!--<a class="logo-horizontal " href="{{ root }}">--->
+                    <a class="logo-horizontal " href="https://megacob.saes-ec.com/">
                         <img src="{{ root }}/template_ok/images/brand/logo.png" class="header-brand-img desktop-logo"
                              alt="logo">
                         <img src="{{ root }}/template_ok/images/brand/logo-3.png" class="header-brand-img light-logo1"
