--- a/views/producto/verSeguimientosDiners.twig
+++ b/views/producto/verSeguimientosDiners.twig
@@ -5,7 +5,7 @@
 
 			<div class="card">
 				<div class="card-header">
-					<h4 class="card-title">CLIENTE {{ test|raw }}</h4>
+					<h4 class="card-title">CLIENTE</h4>
 				</div>
 				<div class="card-body">
 					<div class=" row mb-4">
