--- a/views/reportes/filtrosBaseGeneral.twig
+++ b/views/reportes/filtrosBaseGeneral.twig
@@ -125,6 +125,7 @@
 	</div>
 	<div class="card-footer">
 		<button id="btnFiltro" class="btn btn-success"><i class="glyphicon glyphicon-search"></i> Filtrar</button>
+		<button id="btnExcel" class="btn btn-info"><i class="fa fa-file-excel-o"></i> Generar Excel</button>
 		<button id="btnTodos" class="btn btn-success"><i class="fa fa-eraser"></i> Limpiar filtros</button>
 		{% include "reportes/loader.twig" %}
 		<script>
